Change Color scheme and add Links to url

--- a/about.html
+++ b/about.html
@@ -97,7 +97,9 @@
     <!--About Section-->
     <section class="about">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Who we Are</h1>
+        <h1 class="section-heading" data-aos="fade-up">
+          <span>Who</span> we Are
+        </h1>
         <p data-aos="fade-up">
           Are you informed? More news more often move closer to the world
         </p>
@@ -231,7 +233,9 @@
     <!-- Our Team Section -->
     <section class="our-team">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Our Team</h1>
+        <h1 class="section-heading" data-aos="fade-up">
+          <span>Our</span> Team
+        </h1>
         <p data-aos="fade-up">
           Standing close to our Customers, as we are ready to serve you with
           improved Solutions
