--- a/business-insights.html
+++ b/business-insights.html
@@ -102,7 +102,9 @@
 
     <section class="business-insights">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Business Insights</h1>
+        <h1 class="section-heading" data-aos="fade-up">
+          <span>Business</span> Insights
+        </h1>
         <p data-aos="fade-up">
           Let's see the world of real estate from a different perspective
           transforming from commitments to <br />
