--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
 
     <div class="contact-us">
       <div class="title flex justify-center items-center">
-        <h2>Get in Touch</h2>
+        <h2><span>Get</span> in Touch</h2>
       </div>
       <div class="box">
         <div class="contact form">
