--- a/home.html
+++ b/home.html
@@ -25,15 +25,6 @@
     <script src="https://kit.fontawesome.com/2e2b578872.js"></script>
   </head>
   <body>
-    <div class="upper-header">
-      <ul>
-        <li><a>+92 334-9000007</a></li>
-        <li>|</li>
-        <li><a href="">Careers</a></li>
-        <li>|</li>
-        <li><a href="">Contact</a></li>
-      </ul>
-    </div>
     <header>
       <div class="carousel-container">
         <div class="carousel">
@@ -126,7 +117,9 @@
     <!--About Section-->
     <section class="about">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">About Regal</h1>
+        <h1 class="section-heading" data-aos="fade-up">
+          <span>About</span> Regal
+        </h1>
         <p data-aos="fade-up">Your No. 1 Property Advisory in the Town</p>
         <div class="container flex items-center">
           <div class="flex-1">
@@ -166,10 +159,16 @@
     <!--Our Work Section-->
     <section class="work">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Featured Projects</h1>
+        <h1 class="section-heading" data-aos="fade-up">
+          <span>Featured</span> Projects
+        </h1>
         <p data-aos="fade-up">Ultra modern and cost effective projects</p>
         <div class="card-wrapper">
-          <div class="card" data-aos="zoom-in">
+          <div
+            class="card"
+            data-aos="zoom-in"
+            onclick="location.href='projects/regal-emporium.html'"
+          >
             <div class="overlay">
               <span>Regal Emporium</span>
               <a href="projects/regal-emporium.html"
@@ -178,7 +177,11 @@
             </div>
             <img src="images/featured-product-1.jpg" alt="" />
           </div>
-          <div class="card" data-aos="zoom-in">
+          <div
+            class="card"
+            data-aos="zoom-in"
+            onclick="location.href='projects/sports-valley.html'"
+          >
             <div class="overlay">
               <span>Blue World Sports Valley</span>
               <a href="projects/sports-valley.html"
@@ -187,7 +190,11 @@
             </div>
             <img src="images/featured-product-2.jpg" alt="" />
           </div>
-          <div class="card" data-aos="zoom-in">
+          <div
+            class="card"
+            data-aos="zoom-in"
+            onclick="location.href='projects/new-metro-city.html'"
+          >
             <div class="overlay">
               <span>New Metro City</span>
               <a href="projects/new-metro-city.html">Gujar Khan</a>
@@ -201,13 +208,19 @@
     <!-- Our Product Section -->
     <section class="products">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Featured Products</h1>
+        <h1 class="section-heading" data-aos="fade-up">
+          <span>Featured</span> Products
+        </h1>
         <p data-aos="fade-up">
           Standing close to our Customers, as we are ready to serve you with
           improved Solutions
         </p>
         <div class="card-wrapper">
-          <div class="card" data-aos="zoom-in">
+          <div
+            class="card"
+            data-aos="zoom-in"
+            onclick="location.href='projects/regal-emporium.html'"
+          >
             <h2 data-aos="fade-up">Regal Emporium</h2>
             <p data-aos="fade-up">
               Regal Emporium Located in the heart of Islamabad, Regal Emporium
@@ -230,7 +243,9 @@
     <!-- Our Service Section -->
     <section class="services">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Providing Solutions</h1>
+        <h1 class="section-heading" data-aos="fade-up">
+          <span>Providing</span> Solutions
+        </h1>
         <p data-aos="fade-up">
           Standing close to our Customers, as we are ready to serve you with
           improved Solutions
@@ -273,7 +288,9 @@
     <!-- News Section -->
     <section class="about">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">News Reels</h1>
+        <h1 class="section-heading" data-aos="fade-up">
+          <span>News</span> Reels
+        </h1>
         <p data-aos="fade-up">
           Are you informed? More news more often move closer to the world
         </p>
@@ -315,12 +332,18 @@
     <!--Our Blog Section-->
     <section class="blog" data-aos="fade-up">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Regal Blogs</h1>
+        <h1 class="section-heading" data-aos="fade-up">
+          <span>Regal</span> Blogs
+        </h1>
         <p data-aos="fade-up">
           Are you exploring new investment options, BEGIN READING
         </p>
         <div class="card-wrapper">
-          <div class="card" data-aos="zoom-in">
+          <div
+            class="card"
+            data-aos="zoom-in"
+            onclick="location.href = 'blogs/advantages-of-investment-in-real-estate.html'"
+          >
             <div class="img-wrapper">
               <img src="images/blog-1.jpg" />
             </div>
@@ -345,7 +368,11 @@
               >
             </div>
           </div>
-          <div class="card" data-aos="zoom-in">
+          <div
+            class="card"
+            data-aos="zoom-in"
+            onclick="location.href = 'blogs/early-bird-balloting.html'"
+          >
             <div class="img-wrapper">
               <img src="images/blog-2.jpg" />
             </div>
@@ -368,7 +395,11 @@
               >
             </div>
           </div>
-          <div class="card" data-aos="zoom-in">
+          <div
+            class="card"
+            data-aos="zoom-in"
+            onclick="location.href = 'blogs/a-golden-investment-opportunity.html'"
+          >
             <div class="img-wrapper">
               <img src="images/blog-3.jpg" />
             </div>
@@ -398,7 +429,9 @@
     <!--Reviews Section-->
     <section class="reviews">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Worthy Clients</h1>
+        <h1 class="section-heading" data-aos="fade-up">
+          <span>Worthy</span> Clients
+        </h1>
         <p data-aos="fade-up">The Customer is always Right</p>
         <div class="testimonial" data-aos="zoom-in">
           <div class="testimonial-text">
@@ -486,7 +519,9 @@
 
     <section class="contact">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Contact Us</h1>
+        <h1 class="section-heading" data-aos="fade-up">
+          <span>Contact</span> Us
+        </h1>
         <p data-aos="fade-up">Feel Free to Reach Out or Contact Us</p>
         <div class="content">
           <div class="contactInfo">
@@ -639,9 +674,9 @@
 
     <script src="js/slider.js"></script>
     <script src="js/app.js"></script>
-    <script
+    <!-- <script
       src="//code.tidio.co/pucdhk1f6whym5incqixkz9kfqw6abac.js"
       async
-    ></script>
+    ></script> -->
   </body>
 </html>
