--- a/products&services.html
+++ b/products&services.html
@@ -99,7 +99,9 @@
     <!-- Our Product Section -->
     <section class="products">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Feature Products</h1>
+        <h1 class="section-heading" data-aos="fade-up">
+          <span>Featured</span> Products
+        </h1>
         <p data-aos="fade-up">
           Standing close to our Customers, as we are ready to serve you with
           improved Solutions
@@ -129,7 +131,7 @@
     <section class="services">
       <div class="container">
         <h1 class="section-heading" data-aos="fade-up">
-          We are providing services
+          <span>We are Provi</span>ding Services
         </h1>
         <p data-aos="fade-up">
           Standing close to our Customers, as we are ready to serve you with
