--- a/projects.html
+++ b/projects.html
@@ -97,7 +97,9 @@
     <!--Our Work Section-->
     <section class="work">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Our Projects</h1>
+        <h1 class="section-heading" data-aos="fade-up">
+          <span>Our</span> Projects
+        </h1>
         <p data-aos="fade-up">Ultra modern and cost effective projects</p>
         <div class="card-wrapper">
           <div class="card" data-aos="zoom-in">
