--- a/videos.html
+++ b/videos.html
@@ -99,7 +99,7 @@
     </header>
 
     <div class="videos-gallery">
-      <h1>Our Videos</h1>
+      <h1><span>Our</span> Videos</h1>
       <div class="video-row">
         <div class="video-col">
           <div class="feature-img">
