Blogs Post format are done

--- a/projects/new-metro-city.html
+++ b/projects/new-metro-city.html
@@ -127,7 +127,7 @@
             harmony in your life but your surroundings as well. Regal marketing
             is authorized sales partner of this remarkable project.
           </p>
-          <h3>Owners and Developers</h3>
+          <h2>Owners and Developers</h2>
           <p>
             From the house of Mr. Malik Riaz Hussian, Mr. Bilal Malik (Grandson
             of Mr. Malik Riaz) continues the legacy of his family by introducing
@@ -140,7 +140,7 @@
             community which can add value to their lives and enhance their
             living standard.
           </p>
-          <h3>Past Projects by BSM Developers</h3>
+          <h2>Past Projects by BSM Developers</h2>
           <p>
             New Metro City is a master planned community. A complete housing
             project with state of the art amenities, monumental master pieces
@@ -152,7 +152,7 @@
             House of BSM Developers ‘New Metro City’ is located at a historic
             crossroad between Kharian and Sarai-Alamgir.
           </p>
-          <h3>Location</h3>
+          <h2>Location</h2>
           <p>
             New Metro City Gujar khan holds an ideal and prime location. The
             proximal and accessible points linked to New Metro City Gujar Khan
@@ -167,7 +167,7 @@
             <li>T Chowk</li>
             <li>Mandra Toll Plaza</li>
           </ul>
-          <h3>No Object Certificate (NOC)</h3>
+          <h2>No Object Certificate (NOC)</h2>
           <p>
             As of the developer’s reliability, with a great portfolio, are one
             of the most reliable developers in the real estate industry.
@@ -178,7 +178,7 @@
             and the legal policies. It is predictable that TMA will soon agree
             to this project.
           </p>
-          <h3>Development Rate</h3>
+          <h2>Development Rate</h2>
           <p>
             New Metro City Gujar Khan is developing at a very fast pace. Land
             levelling, main boulevard construction, boundary wall and other
@@ -186,7 +186,7 @@
             long wait, the housing society of their dreams, ‘New Metro City
             Gujar Khan’ is close to deliver.
           </p>
-          <h3>Planning of New Metro City Gujar Khan Housing Scheme</h3>
+          <h2>Planning of New Metro City Gujar Khan Housing Scheme</h2>
           <p>
             Underground power networks, a modern sewerage system, extensive and
             far reaching roads, walks, gardens, fields, cemeteries, and green
@@ -197,7 +197,7 @@
             Metro City Gujar Khan is the greatest place to live and invest in
             Rawalpindi.
           </p>
-          <h3>Amenities</h3>
+          <h2>Amenities</h2>
           <p>
             The society’s objective as depicted by the name is to join numerous
             greenbelt parks and protected areas that are open to any kind of
@@ -254,13 +254,13 @@
             <li>Well-designed parks and waterfalls</li>
             <li>Children’s playgrounds that are safe and secure</li>
           </ul>
-          <h3>Payment Plan</h3>
+          <h2>Payment Plan</h2>
           <p>The payment plan is as follow:</p>
           <img
             src="../images/project/new-metro-city-gujar-khan/payment-plan.jpeg"
             alt=""
           />
-          <h3>Booking Requirements</h3>
+          <h2>Booking Requirements</h2>
           <p>
             Regal Marketing believes in building a healthy and trustworthy
             relationship with you lined by transparency, so we commend examining
@@ -288,7 +288,12 @@
               <div class="row100">
                 <div class="inquiry-box">
                   <span>Name</span>
-                  <input type="text" placeholder="John Doe" name="" id="" />
+                  <input
+                    type="text"
+                    placeholder="Muhammad NAwaz"
+                    name=""
+                    id=""
+                  />
                 </div>
               </div>
               <div class="row100">
@@ -305,12 +310,7 @@
               <div class="row100">
                 <div class="inquiry-box">
                   <span>Phone Number</span>
-                  <input
-                    type="text"
-                    placeholder="+92-334 9000007"
-                    name=""
-                    id=""
-                  />
+                  <input type="text" placeholder="03351234567" name="" id="" />
                 </div>
               </div>
               <div class="row100">
