--- a/home.html
+++ b/home.html
@@ -117,24 +117,15 @@
     <!--About Section-->
     <section class="about">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">
-          <span>About</span> Regal
-        </h1>
-        <p data-aos="fade-up">Your No. 1 Property Advisory in the Town</p>
+        <h1 class="section-heading"><span>About</span> Regal</h1>
+        <p>Your No. 1 Property Advisory in the Town</p>
         <div class="container flex items-center">
           <div class="flex-1">
-            <img
-              class="about-me-img"
-              src="images/about-us.png"
-              alt=""
-              data-aos="zoom-in"
-            />
+            <img class="about-me-img" src="images/about-us.png" alt="" />
           </div>
           <div class="flex-1">
-            <h1 class="news-title" data-aos="fade-bottom">
-              WE HAVE MORE THAN 7 YEARS OF EXPERIENCE
-            </h1>
-            <p class="news-body" data-aos="fade-bottom">
+            <h1 class="news-title">WE HAVE MORE THAN 7 YEARS OF EXPERIENCE</h1>
+            <p class="news-body">
               Regal Marketing Network is among the fastest-growing marketing
               network around the world having its offices in many cities of
               Pakistan and also worldwide agents. The company deals in all
