--- a/home.html
+++ b/home.html
@@ -243,31 +243,34 @@
         </p>
         <div class="card-wrapper">
           <div class="card" data-aos="zoom-in">
-            <img src="images/asset-management.png" alt="" data-aos="ease-out" />
-            <h2 data-aos="fade-up">Asset Management</h2>
-            <p data-aos="fade-up">
+            <div class="service-img"></div>
+            <!-- <img src="images/asset-management.png" alt="" data-aos="ease-out" /> -->
+            <h2>Asset Management</h2>
+            <p>
               Managing workspaces, retail, residential or industrial property,
               efficiently and cost-effectively, handling the loops and enhancing
               the worth.
             </p>
           </div>
           <div class="card" data-aos="zoom-in">
-            <img
+            <div class="service-img"></div>
+            <!-- <img
               src="images/merge-your-property.png"
               alt=""
               data-aos="ease-out"
-            />
-            <h2 data-aos="fade-up">Merge Your Property</h2>
-            <p data-aos="fade-up">
+            /> -->
+            <h2>Merge Your Property</h2>
+            <p>
               Trade your assets with us. You might be able to build a larger and
               more valuable property than you could have on each parcel
               separately.
             </p>
           </div>
           <div class="card" data-aos="zoom-in">
-            <img src="images/expert-opinions.png" alt="" data-aos="ease-out" />
-            <h2 data-aos="fade-up">Expert Opinions</h2>
-            <p data-aos="fade-up">
+            <div class="service-img"></div>
+            <!-- <img src="images/expert-opinions.png" alt="" data-aos="ease-out" /> -->
+            <h2>Expert Opinions</h2>
+            <p>
               There are many variations of passages of but the majority have
               suffered alteration in some form.
             </p>
@@ -321,12 +324,10 @@
     </section>
 
     <!--Our Blog Section-->
-    <section class="blog" data-aos="fade-up">
+    <section class="blog">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">
-          <span>Regal</span> Blogs
-        </h1>
-        <p data-aos="fade-up">
+        <h1 class="section-heading"><span>Regal</span> Blogs</h1>
+        <p class="section-description">
           Are you exploring new investment options, BEGIN READING
         </p>
         <div class="card-wrapper">
@@ -340,12 +341,10 @@
             </div>
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
-                <h1 data-aos="fade-up">
-                  Advantages of Investment in Real Estate
-                </h1>
+                <h1>Advantages of Investment in Real Estate</h1>
               </a>
-              <span data-aos="fade-up">August 29, 2022</span>
-              <p data-aos="fade-up">
+              <span>August 29, 2022</span>
+              <p>
                 Real estate investments have the muscle to unlock endless
                 opportunities for those who compel to the business or to save
                 for the better future. The passive income that each investment
@@ -354,7 +353,6 @@
               <a
                 href="blogs/advantages-of-investment-in-real-estate.html"
                 class="read-more"
-                data-aos="fade-up"
                 >Read More</a
               >
             </div>
@@ -369,19 +367,16 @@
             </div>
             <div class="card-content">
               <a href="blogs/early-bird-balloting.html">
-                <h1 data-aos="fade-up">Early Bird Balloting</h1>
+                <h1>Early Bird Balloting</h1>
               </a>
-              <span data-aos="fade-up">August 29, 2022</span>
-              <p data-aos="fade-up">
+              <span>August 29, 2022</span>
+              <p>
                 New metro city Gujar Khan Files bookings are now open at Regal
                 Marketing and a good number of files are available at our
                 office. New Metro City Gujar Khan Early Bird Balloting has been
                 announced by BSM developers.
               </p>
-              <a
-                href="blogs/early-bird-balloting.html"
-                class="read-more"
-                data-aos="fade-up"
+              <a href="blogs/early-bird-balloting.html" class="read-more"
                 >Read More</a
               >
             </div>
@@ -396,10 +391,10 @@
             </div>
             <div class="card-content">
               <a href="blogs/a-golden-investment-opportunity.html">
-                <h1 data-aos="fade-up">A Golden Investment Opportunity</h1>
+                <h1>A Golden Investment Opportunity</h1>
               </a>
-              <span data-aos="fade-up">August 29, 2022</span>
-              <p data-aos="fade-up">
+              <span>August 29, 2022</span>
+              <p>
                 After getting huge accomplishments in New Metro City Kharian and
                 Golf City Gwadar, BSM Developer is going to construct a new
                 project named “New Metro City Gujar khan”. The project offers
@@ -408,7 +403,6 @@
               <a
                 href="blogs/a-golden-investment-opportunity.html"
                 class="read-more"
-                data-aos="fade-up"
                 >Read More</a
               >
             </div>
