Color Combination test

--- a/home.html
+++ b/home.html
@@ -282,28 +282,19 @@
     <!-- News Section -->
     <section class="about">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">
-          <span>News</span> Reels
-        </h1>
-        <p data-aos="fade-up">
-          Are you informed? More news more often move closer to the world
-        </p>
+        <h1 class="section-heading"><span>News</span> Reels</h1>
+        <p>Are you informed? More news more often move closer to the world</p>
         <div class="container flex items-center">
           <div class="flex-1">
-            <img
-              class="about-me-img"
-              src="images/news.png"
-              alt=""
-              data-aos="zoom-in"
-            />
+            <img class="about-me-img" src="images/news.png" alt="" />
           </div>
           <div class="flex-1">
-            <h3 data-aos="fade-bottom">Offices | 02 August 2022</h3>
-            <h1 class="news-title" data-aos="fade-bottom">
+            <h3>Offices | 02 August 2022</h3>
+            <h1 class="news-title">
               3564 low budget living units completed under Naya Pakistan Housing
               Program
             </h1>
-            <p class="news-body" data-aos="fade-bottom">
+            <p class="news-body">
               Some 3,564 low-cost housing units from the Workers' Welfare Fund
               (WWF) and 18,499 from the Akhuwat Foundation have been completed
               under the Naya Pakistan Housing Scheme (NPHP), according to
@@ -315,9 +306,7 @@
               Fund and development authorities work together to deliver low-cost
               housing projects.
             </p>
-            <button class="btn btn-secondary" data-aos="fade-bottom">
-              EXPLORE ALL NEWS
-            </button>
+            <button class="btn btn-primary">EXPLORE ALL NEWS</button>
           </div>
         </div>
       </div>
@@ -414,10 +403,8 @@
     <!--Reviews Section-->
     <section class="reviews">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">
-          <span>Worthy</span> Clients
-        </h1>
-        <p data-aos="fade-up">The Customer is always Right</p>
+        <h1 class="section-heading"><span>Worthy</span> Clients</h1>
+        <p>The Customer is always Right</p>
         <div class="testimonial" data-aos="zoom-in">
           <div class="testimonial-text">
             <div class="user-text">
@@ -471,31 +458,26 @@
               src="images/lady.png"
               class="user-pic"
               onclick="showReview()"
-              data-aos="fade-up"
             />
             <img
               src="images/lady.png"
               class="user-pic"
               onclick="showReview()"
-              data-aos="fade-up"
             />
             <img
               src="images/lady.png"
               class="user-pic active-pic"
               onclick="showReview()"
-              data-aos="fade-up"
             />
             <img
               src="images/lady.png"
               class="user-pic"
               onclick="showReview()"
-              data-aos="fade-up"
             />
             <img
               src="images/lady.png"
               class="user-pic"
               onclick="showReview()"
-              data-aos="fade-up"
             />
           </div>
         </div>
