Website home color

--- a/home.html
+++ b/home.html
@@ -228,10 +228,8 @@
     <!-- Our Service Section -->
     <section class="services">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">
-          <span>Providing</span> Solutions
-        </h1>
-        <p data-aos="fade-up">
+        <h1 class="section-heading"><span>Providing</span> Solutions</h1>
+        <p>
           Standing close to our Customers, as we are ready to serve you with
           improved Solutions
         </p>
